--- a/style.css
+++ b/style.css
@@ -6,3 +6,78 @@ header {
     display: block;
     width: 50%; /* Para ocupar todo el ancho del encabezado */
 }
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+  
+.left {
+    flex: 1;
+    padding: 20px;
+}
+  
+textarea {
+    width: 100%;
+    height: 150px;
+    margin-bottom: 10px;
+}
+  
+.botones{
+    margin: 0 auto;
+    padding: 50px;
+}
+
+button {
+    display: inline;
+    margin-top: 50px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 40%;
+    padding: 15px 0;
+    font-size: 18px;
+    font-weight: bold;
+    color: black;
+    border-radius: 15px;
+    transition: 0.7s all;
+    cursor: pointer;
+}
+  
+#Boton-Encriptar{
+    border-color: blue;
+}
+
+#Boton-Encriptar:hover{
+    background-color: blue;
+    color: white;
+    transform: scale(1.2);
+}
+
+#Boton-Desencriptar{
+    border-color: green;
+}
+
+#Boton-Desencriptar:hover{
+    background-color: green;
+    color: white;
+    transform: scale(1.2);
+}
+
+.right {
+    flex: 1;
+    text-align: center;
+    padding: 20px;
+}
+  
+.sinmensaje {
+    max-width: 200px;
+    margin: 0 auto;
+    padding: 50px;
+    margin-bottom: 10px;
+}
+  
+h1, h2{
+    text-align: center;
+    font-weight: bold;
+}
