--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ header {
     width: 200px; /* Tamaño del encabezado */;
 }
 
+body{
+    font-family: 'Roboto Mono', monospace;
+}
+
 .caja{
     display: block;
     width: 50%; /* Para ocupar todo el ancho del encabezado */
@@ -14,24 +18,32 @@ header {
 }
   
 .left {
-    flex: 1;
+    width: 700px;
     padding: 20px;
 }
   
 textarea {
     width: 100%;
     height: 150px;
-    margin-bottom: 10px;
+    margin-bottom: 100px;
 }
   
+.MensajeImportante{
+    margin: 0 auto;
+}
+
+.MensajeImportante p{
+    font-size: 10px;
+    font-weight: bold;
+}
+
 .botones{
     margin: 0 auto;
-    padding: 50px;
 }
 
 button {
     display: inline;
-    margin-top: 50px;
+    margin-top: 10px;
     margin-left: 20px;
     margin-right: 20px;
     width: 40%;
@@ -77,7 +89,13 @@ button {
     margin-bottom: 10px;
 }
   
-h1, h2{
-    text-align: center;
+h1{
+    font-size: 18;
     font-weight: bold;
+    text-align: center;
+}
+
+h2{
+    font-size: 12;
+    text-align: center;
 }
