Implementación de toda la lógica de cifrado y descifrado, así como la del botón copiar (olvide hacer comit antes de implementar el boton)

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ h1{
 #Boton-Copiar{
     border-color: gray;
     color: gray;
-    visibility: hidden;
+    display: none;
 }
 
 #Boton-Copiar:hover{
